// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer Component should match the snapshot 1`] = `<ForwardRef />`;

exports[`Spacer Component should receive correct padding based on size selection 1`] = `
<div
  className="gZSZft"
/>
`;

exports[`Spacer Component should render inline-block if set to horizontal 1`] = `
<div
  className="jXdyNt"
/>
`;

exports[`Spacer Component when provided a responsiveSizes object contains the correct media queries 1`] = `
<div
  className="kfZgnW"
/>
`;
